@@ -4,7 +4,18 @@ $Id$                       -*-text-*-
 **** 0.66 NOT RELEASED YET
 
 
-FIX rt.cpan.org #47265 (partial)
+Fix rt.cpan.org #43765
+    
+    Code inconsistent with documentation for loop_once.
+
+    Note: Keeping timeout undefined in loop_once will now block until
+    something arrived on the socket.
+
+Fix rt.cpan.org #47050
+
+    Fixed logic error in bgsend socket acquisition code.
+
+Fix rt.cpan.org #47265 (partial)
 
     Frequently Net:DNS under Windows XP has a UDP problem which is
     caused by a buggy implementation of SOCKS under Windows.
